# ci-framework

./: .bandit  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  README.md  action.yml  coverage.xml  pyproject.toml  test-auto-merge.tmp  test-ci-simple.md  test-cleanup-permissions.tmp  test-cleanup.tmp  test-fresh-settings.txt  test-settings-change.txt
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: AG_CI_complete_fix.md  AG_CI_single_fix.md  AG_quality_complete_fix.md  AG_quality_iterate.md
.claude/state/: quality_complete_fix.json  quality_iteration.json
.github/: labeler.yml
.github/workflows/: ci.yml  cleanup-dev-files.yml  python-ci-template.yml  python-ci-template.yml.template  reusable-ci.yml  standalone-ci.yml
actions/change-detection/: README.md  action.yml
actions/cleanup-dev-files/: README.md  action.yml
actions/cross-platform-validation/: README.md  action.yml
actions/docker-cross-platform/: README.md  action.yml
actions/performance-benchmark/: README.md  action.yml
actions/quality-gates/: README.md  action.yml
actions/security-scan/: README.md  action.yml
ai_docs/: ci-framework-comprehensive-prd.md  development-methodology.md  session-restart-resilience-guide.md
artifacts/reports/: build_dashboard_20250720_134529.md  comprehensive_report_report_20250719_114809.json  comprehensive_report_report_20250719_114923.json  comprehensive_report_report_20250719_155841.json  comprehensive_report_report_20250719_164603.json  comprehensive_report_report_20250719_173027.json  comprehensive_report_report_20250719_173121.json  comprehensive_report_report_20250719_173224.json  comprehensive_report_report_20250719_213915.json  comprehensive_report_report_20250720_093959.json  comprehensive_report_report_20250720_094105.json  comprehensive_report_report_20250720_094158.json  comprehensive_report_report_20250720_094925.json  comprehensive_report_report_20250720_134529.json  comprehensive_report_report_20250720_134634.json  comprehensive_report_report_20250720_141800.json  comprehensive_report_report_20250720_202252.json  comprehensive_report_report_20250720_210203.json  coverage_report_20250719_213915.md  performance_dashboard_20250720_134634.md  performance_report_20250719_114717.json  performance_report_20250719_114721.json  performance_report_20250719_114724.json  performance_report_20250719_114809.json  performance_report_20250719_114829.json  performance_report_20250719_114832.json  performance_report_20250719_114835.json  performance_report_20250719_114923.json  performance_report_20250719_155751.json  performance_report_20250719_155755.json  performance_report_20250719_155757.json  performance_report_20250719_155841.json  performance_report_20250719_164523.json  performance_report_20250719_164526.json  performance_report_20250719_164529.json  performance_report_20250719_164603.json  performance_report_20250719_172944.json  performance_report_20250719_172948.json  performance_report_20250719_172950.json  performance_report_20250719_173027.json  (+84 more)
docs/: QUALITY_GATES_PREVENTION.md  README.md  bdd-scenarios-ci-workflow.md  ci-workflow-guide.md  quality-gates-action.md  troubleshooting.md
docs/api/: README.md
docs/best-practices/: README.md  change-detection-optimization-patterns.md  docker-cross-platform-testing.md  performance-benchmarking-patterns.md  pixi-environment-patterns.md  quality-gates-comprehensive-guide.md  security-scanning-patterns.md
docs/examples/: development-artifacts-cleanup.md  example-caller.yml  example-cleanup-caller.yml  project-types.md  quick-start.md  reusable-cleanup-dev-files.yml
docs/migration/: README.md
docs/quick-start/: README.md  existing-project.md  new-project.md
docs/tutorials/: README.md  video-production-guide.md
examples/: advanced-usage.yml  basic-usage.yml  change-detection-usage.yml  monorepo-change-detection.yml  nodejs-project.yml  python-project.yml
framework/actions/: __init__.py  change_detection.py  performance_benchmark.py  quality_gates.py
framework/maintenance/: cli.py  health_monitor.py  scheduler.py
framework/migration/: __init__.py  analyzer.py  cli.py  migrator.py  models.py
framework/performance/: __init__.py  cli.py  collector.py  comparator.py  models.py  schema.py  trend_analyzer.py
framework/reporting/: artifact_manager.py  cli.py  github_reporter.py  report_generator.py  template_engine.py
framework/security/: analyzer.py  cli.py  collector.py  dashboard_generator.py  models.py  sbom_generator.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2049afe8a0c5c15c___init___py.html  z_2049afe8a0c5c15c_cli_py.html  z_2049afe8a0c5c15c_health_monitor_py.html  z_2049afe8a0c5c15c_scheduler_py.html  z_217a96c3a62328a7___init___py.html  z_2f86280258e69b13___init___py.html  z_2f86280258e69b13_cli_py.html  z_2f86280258e69b13_collector_py.html  z_2f86280258e69b13_comparator_py.html  z_2f86280258e69b13_models_py.html  z_2f86280258e69b13_schema_py.html  z_2f86280258e69b13_trend_analyzer_py.html  z_41d83c2b06b42bb5___init___py.html  z_41d83c2b06b42bb5_analyzer_py.html  z_41d83c2b06b42bb5_cli_py.html  z_41d83c2b06b42bb5_collector_py.html  z_41d83c2b06b42bb5_dashboard_generator_py.html  z_41d83c2b06b42bb5_models_py.html  z_41d83c2b06b42bb5_sbom_generator_py.html  z_7c623859fcbf85ad___init___py.html  z_7c623859fcbf85ad_quality_gates_py.html  z_96b951538a24f313___init___py.html  z_96b951538a24f313_artifact_manager_py.html  z_96b951538a24f313_cli_py.html  z_96b951538a24f313_github_reporter_py.html  z_96b951538a24f313_report_generator_py.html  z_96b951538a24f313_template_engine_py.html
scripts/: detect-changes.py  detect_changes.py  fix-lint-violations.sh  generate_compatibility_report.py  manual-cleanup-development.sh
scripts/local-ci/: README.md  common.sh  local-quality-gates.sh  monorepo-ci.sh  package-detection.py  selective-ci.sh  setup-local-ci.sh
templates/: README.md  pre-commit-config.yaml  pyproject-tiered-template.toml  test_migration.py  validate_config.py
workflows/: python-ci-template.feature
(+49 files in other folders)
