[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-framework-tools"
version = "0.0.1"
description = "Internal tools and scripts for the CI Framework."
authors = [
    { name = "MementoRC", email = "your-email@example.com" }
]
dependencies = [
    "pytest",
    "psutil",
    "pandas",
    "pyyaml",
    "requests",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "yamllint",
    "pip-audit",
    "bandit",
    "detect-secrets",
    "twine",
    "build",
    "cyclonedx-bom",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "psutil",
    "pandas",
    "pyyaml",
    "requests",
]

[tool.hatch.envs.dev]
dependencies = [
    "ruff",
    "black",
    "yamllint",
    "pip-audit",
    "bandit",
    "detect-secrets",
    "twine",
    "build",
    "cyclonedx-bom",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]

[tool.pixi]

[tool.pixi.project]
name = "ci-framework-tools"
version = "0.0.1"
channels = ["conda-forge"]
platforms = ["linux-64"]

# Core dependencies for the default environment
[tool.pixi.dependencies]
python = "3.12.*"
pytest = "*"
psutil = "*"
pandas = "*"
pyyaml = "*"
requests = "*"
hypothesis = "*"

# Development tools and dependencies for the 'dev' environment
[tool.pixi.feature.dev.dependencies]
ruff = "*"
black = "*"
yamllint = "*"
actionlint = "*"
pip-audit = "*"
bandit = "*"
bc-detect-secrets = "*"
twine = "*"
python-build = "*"
cyclonedx-bom = "*"

# Pixi environments referencing features
[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "dev" }

[tool.pixi.tasks]
lint = "ruff check framework/"
format = "black --check framework/"
yaml-lint = "yamllint .github/workflows/"
action-lint = "actionlint"
security-audit = "pip-audit --verbose"
bandit-scan = "bandit -r framework/"
detect-secrets = "detect-secrets scan --all-files"
unit-test = "pytest framework/tests/"
